--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,4433],[],[[4,0,0,[],[1,177,4255],[]]],[],[1,1,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,10223],[],[[4,0,0,[],[1,261,9959],[]]],[],[1,1,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Tc1","*C:\\Users\\ASUS\\Desktop\\Other\\Code\\robotframework_demo\\TestCases\\Tc1.robot","*TestCases/Tc1.robot","*LoginTest"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginTC","*C:\\Users\\ASUS\\Desktop\\Other\\Code\\robotframework_demo\\TestCases\\LoginTC.robot","*TestCases/LoginTC.robot","*LoginTest"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:04","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:04","fail":0,"id":"s1","label":"Tc1","name":"Tc1","pass":1,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:10","fail":0,"label":"All Tests","pass":1,"skip":0}],[],[{"elapsed":"00:00:10","fail":0,"id":"s1","label":"LoginTC","name":"LoginTC","pass":1,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1671896603119;
+window.output["baseMillis"] = 1671961867564;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 4442;
+window.output["generated"] = 10239;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
