đã xong case login

--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,24510],[],[[4,0,0,[],[1,355,17461],[]],[5,0,0,[],[1,17818,6690],[]]],[],[2,2,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,23400],[],[[4,0,0,[],[1,289,11153],[]],[5,0,0,[],[1,11444,11955],[]]],[],[2,2,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*LoginTC","*C:\\Users\\DanhNC14\\Desktop\\Auto_Test\\robotframework_demo1\\TestCases\\LoginTC.robot","*TestCases/LoginTC.robot","*TC_Login_True","*TC_Login_False_Sai_Username"]);
+window.output["strings"] = window.output["strings"].concat(["*","*LoginTC","*C:\\Users\\DanhNC14\\Desktop\\Auto_Test\\robotframework_demo1\\TestCases\\LoginTC.robot","*TestCases/LoginTC.robot","*TC_Login_KhongNhap_Username","*TC_Login_KhongNhap_Password"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:24","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:25","fail":0,"id":"s1","label":"LoginTC","name":"LoginTC","pass":2,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:23","fail":0,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:23","fail":0,"id":"s1","label":"LoginTC","name":"LoginTC","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1672394550690;
+window.output["baseMillis"] = 1672979482878;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 24519;
+window.output["generated"] = 23917;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
